# pursuit-client

./: LICENSE  README.md  pursuit-client.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  PursuitClient.hs
src/Web/Pursuit/: Client.hs
