name:                pursuit-client
version:             0.1.0.0
synopsis:            A cli client for pursuit
description:         Please see README.md
homepage:            https://github.com/githubuser/pursuit-client#readme
license:             BSD3
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          soupiral@gmail.com
copyright:           2016 Gil Mizrahi
category:            Web
build-type:          Simple

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PursuitClient
  build-depends:
      base >= 4.7 && < 5
    , wreq
    , http-client
    , lens
    , taggy-lens
    , async
    , text
  default-language:    Haskell2010

executable pursuit-search
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , pursuit-client
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pursuit-client
